src/snapshots/learn_chumsky__test__literal_expressions-7.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "'a'"

Ok(
    (
        Char('a'),
        0..3,
    ),
)
