src/snapshots/learn_chumsky__test__literal_expressions-8.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "'\n'"

Ok(
    (
        Char('\n'),
        0..4,
    ),
)
