src/snapshots/learn_chumsky__test__literal_expressions-9.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
'\t'
---

Some(
    (
        Char('\t'),
        0..4,
    ),
)

--- Errors ---
[]
---
