src/snapshots/learn_chumsky__test__literal_expressions.snap
---
source: src/test.rs
expression: "&snapshot"
---
Input: "823_472_340"

Ok((Int(823472340), 0..11))
