src/snapshots/learn_chumsky__test__record_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
---
.{ }
---

Ok(
    (
        Record {
            name: None,
            fields: [],
        },
        0..4,
    ),
)
