src/snapshots/learn_chumsky__test__recover_block-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ {testing; }
---

None

--- Errors ---
[
    Report {
        label: Some(
            "block",
        ),
        span: 0..0,
        reason: Unexpected,
        expected: [
            Some(
                Semi,
            ),
        ],
        found: None,
    },
]
---
