src/snapshots/learn_chumsky__test__recover_block-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
{ testing )}
---

Some(
    (
        Block(
            [
                Error,
            ],
        ),
        0..12,
    ),
)

--- Errors ---
[
    Report {
        label: Some(
            Expression,
        ),
        span: 10..11,
        reason: Unclosed {
            span: 0..1,
            delimiter: OpenBrace,
        },
        found: CloseParen,
        expected: [
            CloseBrace,
        ],
    },
]
---
